--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -132,16 +132,16 @@
             "Title": "Hands game",
             "Description": "Juego de piedra papel y tijeras extendido. Un proyecto personal desarrollado en angular en el que juegas al azar contra la máquina. Cuenta con la utilización de servicios, interfaces y componentes.",
             "imgs": ["assets/images/hands-game.png"],
-            "Link-gh": "https://github.com/andresjosehr/hands-game",
-            "Link-demo": "https://handsgame.andresjosehr.com/",
+            "ghLink": "https://github.com/andresjosehr/hands-game",
+            "demoLink": "https://andresjosehr.com/projects/hands-game",
             "Technologies": ["Angular", "CSS GRID", "SASS", "Angular animations"]
         },
         {
             "Title": "Countries viewer",
             "Description": "Interfaz que consume una API de países con el que se pueden visualizar lista de países, ver detalles de cada país, filtrar por nombre y región. Ademas cuenta con un dark mode para alternar entre el tema oscuro y el claro.",
             "imgs": ["assets/images/countries-viewer.png"],
-            "Link-gh": "https://github.com/andresjosehr/countries-viewer",
-            "Link-demo": "https://countriesviewer.andresjosehr.com/",
+            "ghLink": "https://github.com/andresjosehr/countries-viewer",
+            "demoLink": "https://andresjosehr.com/projects/countries-viewer",
             "Technologies": ["Angular", "RxJS", "SASS", "API"]
         }
     ],
